# cpp-test-task-main

./: .gitignore  CMakeLists.txt  README.md
Misc/: M_MemoryStream.cpp  M_MemoryStream.hpp  M_SystemMessage.cpp  M_SystemMessage.hpp  Memory.cpp  Memory.hpp
String/: ST_String.cpp  ST_String.hpp  generic.hpp
Types/: TY_Base.cpp  TY_Base.hpp  TY_Blob.cpp  TY_Blob.hpp
XML/: XML_Parser.cpp  XML_Parser.hpp  XML_xerces_String.cpp  XML_xerces_String.hpp
repository/: FUReader.cpp  FUReader.hpp  FUSReplaceReader.cpp  FUSReplaceReader.hpp  FUSimpleReader.cpp  FUSimpleReader.hpp  utils.cpp  utils.hpp
tabfiles/: replace.tab  simple.tab
tests/: FUSReplaceReader_test.cpp  FUSimpleReader_test.cpp
